; ModuleID = '/home/carl/AnghaBench/linux/drivers/mailbox/extr_bcm-flexrm-mailbox.c_flexrm_null_desc.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mailbox/extr_bcm-flexrm-mailbox.c_flexrm_null_desc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NULL_TYPE = common dso_local global i32 0, align 4
@DESC_TYPE_SHIFT = common dso_local global i32 0, align 4
@DESC_TYPE_MASK = common dso_local global i32 0, align 4
@NULL_TOGGLE_SHIFT = common dso_local global i32 0, align 4
@NULL_TOGGLE_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @flexrm_null_desc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @flexrm_null_desc(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = load i32, i32* @NULL_TYPE, align 4
  %6 = load i32, i32* @DESC_TYPE_SHIFT, align 4
  %7 = load i32, i32* @DESC_TYPE_MASK, align 4
  %8 = call i32 @DESC_ENC(i32 %4, i32 %5, i32 %6, i32 %7)
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* %2, align 4
  %11 = load i32, i32* @NULL_TOGGLE_SHIFT, align 4
  %12 = load i32, i32* @NULL_TOGGLE_MASK, align 4
  %13 = call i32 @DESC_ENC(i32 %9, i32 %10, i32 %11, i32 %12)
  %14 = load i32, i32* %3, align 4
  ret i32 %14
}

declare dso_local i32 @DESC_ENC(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
